fix: wrap long lines in post code

--- a/src/modules/post/styles/PostBody.module.scss
+++ b/src/modules/post/styles/PostBody.module.scss
@@ -48,6 +48,7 @@
 .content code {
   padding-top: 5rem;
   margin-top: 5rem;
+  white-space: break-spaces !important;
 }
 
 .copyImage {
